assets/scss/_layouts.scss
.site--container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;

  .site--main {
    flex: 1;
  }

}

#header {

  .banner {
    position: relative;

    .banner_attr {
      position: absolute;
      right: 0;
      bottom: 0;
      font-size: 0.6em;
      padding: 5px;
      background-color: white;
      opacity: 0.5;
    }
  }
}

#footer {
  margin-top: 2em;
  padding: 2em 0 0em;

  .affiliates {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;

    .logo {
      padding: 0 1em 2em;
      transition: transform 0.2s ease-in;
      img {
        height: 5em;
      }

      &:hover {
        transform: scale(1.05);
      }
    }
  }
}

#underfooter {
  .container {
    display: flex;
    justify-content: space-between;

    .widget {
      flex-grow: 1;
    }
    .contact {
      p {
        margin-bottom: 0;
        line-height: 1.5em;
      }
    }
    .copyright {
      align-self: flex-end;
    }
  }
}

